add route: get one vehicle
